# StringNum

./: .gitignore  CMakeLists.txt  compile_win.sh
include/: StringNum.hpp
src/: StringNum.cpp  StringNumOperators.cpp  main.cpp
src/operators/: BooleanOperators.cpp  Divide.cpp  Minus.cpp  Modulo.cpp  Multiply.cpp  Plus.cpp  PlusPlus.cpp
test/: CMakeLists.txt  main.cpp
